--- a/.github/workflows/configure-aws-credentials.yml
+++ b/.github/workflows/configure-aws-credentials.yml
@@ -1,6 +1,10 @@
 name: Configure AWS Credentials
 
-on: push
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+    branches: [ main ]
 
 # These permissions are needed to interact with GitHub's OIDC Token endpoint.
 permissions:
