Add sample command

--- a/.github/workflows/configure-aws-credentials.yml
+++ b/.github/workflows/configure-aws-credentials.yml
@@ -20,4 +20,6 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: us-east-2
-      - run: aws sts get-caller-identity
+      - run: | 
+          aws sts get-caller-identity
+          aws s3 ls
